# rust-vrp-solver

./: .gitignore  Cargo.toml
.devcontainer/: devcontainer.json
benches/: bench_main.rs
benches/cvrplib/: genetic_grasp_benchmarks.rs  instance_repository.rs  mod.rs
src/: lib.rs  main.rs
src/domain/: mod.rs  route.rs  route_set.rs  stop.rs  vehicle.rs
src/domain/tests/: mod.rs  route_test.rs  vehicle_test.rs
src/entrypoints/: arg_sizes.rs  factories.rs  genetic_solver.rs  lib_tests.rs  mod.rs  parameters.rs
src/entrypoints/abi/: distance_matrix.rs  mod.rs  parameters.rs  route.rs
src/entrypoints/c_interfaces/: c_distance_matrix.rs  mod.rs
src/entrypoints/factories/: distance_matrix.rs  mod.rs  raw_factories.rs  raw_factories_testing_lib.rs  solver_factories.rs
src/entrypoints/ffi/: genetic_solver.rs  mod.rs
src/entrypoints/structures/: arg_sizes.rs  distance_matrix.rs
src/local_search/: local_search.rs  local_searcher.rs  mod.rs  path.rs  path_node.rs  two_opt.rs
src/parsers/: cvrplib_parser.rs  mod.rs  vrp_parser.rs
src/services/: mod.rs  route_service.rs
src/solvers/: mod.rs  sequential_solver.rs  solution.rs  solver.rs  vrp_solution.rs
src/stop_swapper/: mod.rs  neighbor.rs  neighborhood.rs  path.rs  path_node.rs  stop_swapper.rs
src/tests/: cvrplib_solver_test.rs  fixtures.rs  generic_algorithm_test.rs  genetic_algorithm_test.rs  grasp_solver.rs  grasp_solver_test.rs  greedy_solver.rs  greedy_solver_test.rs  mod.rs  route_service_test.rs  route_test.rs  stop_swapper.rs  stop_swapper_test.rs  two_opt_test.rs  vehicle_test.rs
(+83 files in other folders)
