[package]
name = "vrp-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name         = "vrp_solver"
crate-type   = ["rlib", "cdylib"]

[dependencies]
rand = "0.8.4"
rstest = "0.15.0"
rand_chacha = "0.3.1"
libc = "0.2.0"
ndarray = "0.15.0"
criterion = "0.4.0"

[[bench]]
name = "bench_main"
harness = false